--- a/iTrainee.MVC/Areas/Admin/Views/Home/ManageMentor.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/ManageMentor.cshtml
@@ -76,237 +76,39 @@
                 @Html.DisplayFor(modelItem => item.UserName)
             </td>*@
             <td>
-                <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-id="@item.Id" data-target="#save"><i class="fa fa-pencil"></i> Edit</button>
+                <a href="#" class="btn btn-primary" onclick="GetUser(@item.Id)"><i class="glyphicon glyphicon-pencil"></i> Edit</a>
                 <button type="button" class="btn btn-danger btn-xs delete-button" data-id="@item.Id" data-toggle="modal" data-target="#delete"><i class="fa fa-trash"></i> Delete</button>
+
             </td>
         </tr>
 }
 </table>
 
 
-<div class="modal fade" id="save" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
+
+
+<div class="modal fade" id="myModal1">
+    <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Save</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+                <h3 class="modal-title">Add/Edit Trainee</h3>
             </div>
-            <div class="modal-body">
-                <form id="edit-form">
-                    <div class="form-group">
-                        <input type="hidden" class="form-control" name="Id" id="id" readonly>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-form-label">FirstName</label>
-                        <input type="text" class="form-control" name="FirstName" id="first-name" />
-                    </div>
-                    <div class="form-group">
-                        <label class="col-form-label">LastName</label>
-                        <input type="text" class="form-control" name="LastName" id="last-name" />
-                    </div>
-                    <div class="form-group">
-                        <label class="col-form-lab el">Date Of Birth</label>
-                        <input type="date" class="form-control" name="DateOfBirth" id="date-of-birth" />
-                    </div>
-                    <div class="form-group">
-                        <label class="col-form-label">Qualification</label>
-                        <input type="text" class="form-control" name="Qualification" id="qualification" />
-                    </div>
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <input type="submit" id="save-edit-button" class="btn btn-success" value="Save" name="submit" />
-                </form>
+            <div class="modal-body" id="myModalBodyDiv1">
+
             </div>
         </div>
     </div>
 </div>
 
-<div class="modal fade" id="delete" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Confirm</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <p>Are you sure want to delete <span id="name-to-delete"></span>???</p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-danger" id="delete-yes-button" data-dismiss="modal">Delete</button>
-            </div>
-        </div>
-    </div>
-</div>
 
-<div class="modal fade" id="notify" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header" style="color: black">
-                <h5 class="modal-title" id="exampleModalLabel"><i class="fa fa-comment" style="font-size:25px; color:#008000"></i> Message</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body" style="color: black">
-                <span id="message"></span><span class="fa fa-thumbs-up" id="thumbs-up" style="font-size: 25px; color: dodgerblue; padding-left: 15px;"></span>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-dismiss="modal" id="ok-button">Ok</button>
-            </div>
-        </div>
-    </div>
-</div>
 @section scripts {
-
 <script type="text/javascript">
-    $(function () {
-
-    $('#save').on('show.bs.modal', function (event) {
-        var button = $(event.relatedTarget)
-        var id = button.data('id')
-
-        $.ajax({
-            url: "/Admin/Home/GetUser/" + id,
-            type: "GET",
-            contentType: "application/json;charset=UTF-8",
-            dataType: "json",
-            success: function (result) {
-                $('#id').val(result.id);
-                $('#first-name').val(result.firstName);
-                $('#last-name').val(result.lastName);
-                //$('#date-of-birth').val(formatDate(result.DOB));
-                $('#qualification').val(result.qualification);
-                checkValidationAndSaveForm();
-            },
-            error: function () {
-                alert("Unexcepted Error!!!");
-            }
-        });
-    })
-
-    function checkValidationAndSaveForm() {
-        $("#edit-form").validate({
-            errorClass: 'error',
-            rules: {
-                Id: "required",
-                Name: "required",
-                //MobileNumber: {
-                //    required: true,
-                //    minlength: 10,
-                //    maxlength: 10,
-                //},
-                //DateOfBirth: "required",
-                //Qualification: "required",
-                //Address: "required"
-            },
-            messages: {
-                Id: {
-                    required: "Please enter valid Id"
-                }
-                //Name: {
-                //    required: "Please enter valid Name"
-                //},
-                //MobileNumber: {
-                //    required: "Please enter valid MobileNumber",
-                //    maxlength: "Invalid mobile number. Must be 10 digits"
-                //},
-                //DateOfBirth: {
-                //    required: "Please enter valid DateOfBirth"
-                //},
-                //Address: {
-                //    required: "Please enter valid Address"
-                //}
-            },
-            submitHandler: function () {
-                var updatedData = $('#edit-form').serialize();
-
-                $.ajax({
-                    url: "/Admin/Home/SaveUser",
-                    type: "POST",
-                    dataType: 'json',
-                    contentType: 'application/x-www-form-urlencoded; charset=UTF-8',
-                    data: updatedData,
-                    success: function (result) {
-                        if ('1' == result) {
-                            $('#edit').hide();
-                            $('#message').html("Trainee Updated Successfully");
-                            $('#notify').modal('show')
-                            $('#ok-button').on('click', function () {
-                                window.location.replace(window.location.href)
-                            });
-                        } else {
-                            $('#message').html("Trainee Updated failed");
-                            $('#thumbs-up').hide();
-                            $('#notify').modal('show');
-                        }
-                    },
-                    error: function () {
-                        alert("Unexcepted Error!!!");
-                    }
-                });
-            }
-        });
-    }
-
-    //function formatDate(dateOfBirth) {
-    //    var dateString = dateOfBirth.substr(6);
-    //    var currentTime = new Date(parseInt(dateString));
-    //    var month = currentTime.getMonth() + 1;
-    //    var day = currentTime.getDate();
-    //    var year = currentTime.getFullYear();
-    //    day = day < 10 ? "0" + day : day;
-    //    month = month < 10 ? "0" + month : month;
-
-    //    return year.toString() + "-" + month.toString() + "-" + day.toString();
-    //}
-
-    //$('#delete').on('show.bs.modal', function (event) {
-    //    var button = $(event.relatedTarget)
-    //    var id = button.data('id-to-delete')
-
-    //    $.ajax({
-    //        url: "/Trainee/Trainee/GetbyID/" + id,
-    //        type: "GET",
-    //        contentType: "application/json;charset=UTF-8",
-    //        dataType: "json",
-    //        success: function (result) {
-    //            $('#name-to-delete').html(result.Name);
-    //            $('#delete-yes-button').on('click', function () {
-    //                $.ajax({
-    //                    url: "/Trainee/Trainee/Delete/" + id,
-    //                    type: "GET",
-    //                    contentType: "application/json;charset=UTF-8",
-    //                    dataType: "json",
-    //                    success: function (resultForDelete) {
-    //                        if ('1' == resultForDelete) {
-    //                            $('#message').html("Trainee Deleted Successfully");
-    //                            $('#notify').modal('show');
-    //                            $('#ok-button').on('click', function () {
-    //                                window.location.replace(window.location.href)
-    //                            });
-    //                        } else {
-    //                            $('#message').html(resultForDelete);
-    //                            $('#thumbs-up').hide();
-    //                            $('#notify').modal('show');
-    //                        }
-    //                    },
-    //                    error: function () {
-    //                        alert("Unexcepted Error!!!");
-    //                    }
-    //                })
-    //            });
-    //        },
-    //        error: function () {
-    //            alert("Unexcepted Error!!!");
-    //        }
-    //    });
-    //})
-})
-
+    
+var GetUser = function (a) {
+    var e = "/Admin/Home/SaveUser?Id=" + a;
+    $("#myModalBodyDiv1").load(e, function () {
+        $("#myModal1").modal("show");
+    });
+};
 </script>
-
 }
