Completed topics CRUD

--- a/iTrainee.MVC/Areas/Shared/Views/Stream/AddEditStream.cshtml
+++ b/iTrainee.MVC/Areas/Shared/Views/Stream/AddEditStream.cshtml
@@ -71,6 +71,7 @@
 				data: a,
 				success: function () {
 					$("#myModal1").modal("hide");
+					window.location = ("/Mentor/Home/ManageStreams")
 				},
 				error: function () {
 					alert("Unable to save/update data");
