--- a/iTrainee.MVC/Views/Shared/Header.cshtml
+++ b/iTrainee.MVC/Views/Shared/Header.cshtml
@@ -56,7 +56,7 @@
                         </li>
 
                         <li class="nav-item px-3">
-                            <a class="nav-link text-white" href="#">Stream</a>
+                            <a class="nav-link text-white" href="/Mentor/ManageStreams">Stream</a>
                         </li>
                         <li class="nav-item px-3">
                             <a class="nav-link text-white" href="#">Topics</a>
