--- a/iTrainee.MVC/Views/Shared/Header.cshtml
+++ b/iTrainee.MVC/Views/Shared/Header.cshtml
@@ -59,7 +59,7 @@
                             <a class="nav-link text-white" href="/Mentor/ManageStreams">Stream</a>
                         </li>
                         <li class="nav-item px-3">
-                            <a class="nav-link text-white" href="#">Topics</a>
+                            <a class="nav-link text-white" href="/Mentor/Home/ManageTopics">Topics</a>
                         </li>
                         <li class="nav-item px-3">
                             <a class="nav-link text-white" href="#">Sub Topics</a>
