--- a/iTrainee.MVC/Areas/Admin/Views/Home/SaveUser.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/SaveUser.cshtml
@@ -1,49 +1,36 @@
 ﻿@model iTrainee.Models.User
-       <form id="myForm">
-       <div class="form-group">
+<form id="myForm">
 
-        @if(Model.Id == 0)
-                {
-                    <input type="hidden" class="form-control" name="Id" id="id" value = "@Model.Id">
+    <div class="form-group">
+        <input type="hidden" class="form-control" name="Id" id="id" value="@Model.Id" readonly>
+    </div>
+    <div class="form-group">
+        <label class="col-form-label">FirstName</label>
+        <input type="text" class="form-control" name="FirstName" value="@Model.FirstName"/>
+    </div>
+    <div class="form-group">
+        <label class="col-form-label">LastName</label>
+        <input type="text" class="form-control" name="LastName" value="@Model.LastName"/>
+    </div>
+    <div class="form-group">
+        <label class="col-form-lab el">Date Of Birth</label>
+        <input type="date" class="form-control" name="DateOfBirth" value="@Model.DOB"/>
+    </div>
+    <div class="form-group">
+        <label class="col-form-label">Qualification</label>
+        <input type="text" class="form-control" name="Qualification" value="@Model.Qualification"/>
+    </div>
+    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+    <input type="submit" class="btn btn-success" value="Save" name="submit" id="btnSubmit" />
+</form>
 
-                }
-                else
-                {
-                  <input type="text" class="form-control" name="Id" id="id" value = "@Model.Id" readonly>
-
-                }
-            </div>
-
-                    <div class="form-group">
-                        <input type="hidden" class="form-control" name="Id" id="id" value = "@Model.Id" readonly>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-form-label">FirstName</label>
-                        <input type="text" class="form-control" name="FirstName" value = "@Model.FirstName" id="first-name" />
-                    </div>
-                    <div class="form-group">
-                        <label class="col-form-label">LastName</label>
-                        <input type="text" class="form-control" name="LastName" value = "@Model.LastName" id="last-name" />
-                    </div>
-                    <div class="form-group">
-                        <label class="col-form-lab el">Date Of Birth</label>
-                        <input type="date" class="form-control" name="DateOfBirth" value = "@Model.DOB" id="date-of-birth" />
-                    </div>
-                    <div class="form-group">
-                        <label class="col-form-label">Qualification</label>
-                        <input type="text" class="form-control" name="Qualification" value = "@Model.Qualification"  id="qualification" />
-                    </div>
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <input type="submit" class="btn btn-success" value="Save" name="submit" id="btnSubmit" />
-                </form>
-
-                @section Scripts {
+@section Scripts {
     @{
     await Html.RenderPartialAsync("_ValidationScriptsPartial");
 }
 }
 
-                <script>
+<script>
         $(document).ready(function () {
 
         $("#btnSubmit").click(function () {
