--- a/iTrainee.MVC/Areas/Mentor/Views/Home/ManageStreams.cshtml
+++ b/iTrainee.MVC/Areas/Mentor/Views/Home/ManageStreams.cshtml
@@ -4,17 +4,27 @@
 	ViewData["Title"] = "ManageStreams";
 }
 
-
+<style>
+	.btn-add-gradient {
+    background-image: linear-gradient(144deg,#009ffd, rgb(0,35,155) 50%);
+    border-radius: 4px;
+    box-shadow: rgba(0, 79, 255, 0.3) 0 15px 30px -5px;
+    color: #FFFFFF;
+    cursor: pointer;
+    transform: translateY(-6px);
+    transition: transform 700ms cubic-bezier(.3, .7, .4, 1.5);
+}
+</style>
 
 <h1 class="mt-5">Manage Streams</h1>
 
 <p>
-	<a href="#" class="btn btn-primary float-right mb-3" onclick="AddEditStream(0)"><i class="glyphicon glyphicon-pencil"></i> Add New Stream</a>
+	<a href="#" class="btn btn-add-gradient btn-primary float-right mb-3" onclick="AddEditStream(0)"> Add New Stream</a>
 </p>
 <table class="table table-hover table-bordered">
 	<thead>
-		<tr>
-			<th>
+		<tr class="text-center">
+			<th >
 				@Html.DisplayNameFor(model => model.Id)
 			</th>
 
@@ -22,7 +32,7 @@
 
 				@Html.DisplayNameFor(model => model.Name)
 			</th>
-			<th>
+			<th colspan="2">
 				Actions
 			</th>
 		</tr>
@@ -38,15 +48,22 @@
 					@Html.DisplayFor(modelItem => item.Name)
 				</td>
 
-				<td>
-					<a href="#" class="btn btn-primary" onclick="AddEditStream(@item.Id)"><i class="glyphicon glyphicon-pencil"></i> Edit</a> |
-					<a class="btn btn-outline-primary" href="/Shared/Stream/DeleteStream/@item.Id">Delete</a>
-@*  @using (Html.BeginForm("DeleteStream", "Stream", new { id = item.Id, Area="Shared" }))
+				<td class="text-center">
+					<a href="#" class="btn btn-primary" onclick="AddEditStream(@item.Id)"><i class="fa fa-pencil"></i> </a> 
+					
+				</td>
+				<td class="text-center">
+					<form id="DeleteStreamForm" method="post">
+<a class="btn btn-danger btn-xs delete-button" href="/Shared/Stream/DeleteStream/@item.Id"><i class="fa fa-trash"></i></a>
+					</form> 
+@*					@using (Html.BeginForm("DeleteStream", "Stream", new { id = item.Id, Area="Shared" }))
                 {
-                    <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete record with ID = @item.Id');"><i class="fa fa-trash"></i> Delete</button>
+
                 }*@
+					@*<a class="btn btn-danger btn-xs delete-button" href="/Shared/Stream/DeleteStream/@item.Id"><i class="fa fa-trash"></i></a>*@
 				</td>
 			</tr>
+		
 		}
 	</tbody>
 </table>
@@ -74,6 +91,5 @@ var AddEditStream = function (id) {
         $("#streamModal").modal("show");
     });
 };
-
 
 </script>
