--- a/iTrainee.MVC/Areas/Mentor/Views/Home/ManageTopics.cshtml
+++ b/iTrainee.MVC/Areas/Mentor/Views/Home/ManageTopics.cshtml
@@ -4,21 +4,31 @@
 	ViewData["Title"] = "ManageTopics";
 }
 
-
+<style>
+	.btn-add-gradient {
+    background-image: linear-gradient(144deg,#009ffd, rgb(0,35,155) 50%);
+    border-radius: 4px;
+    box-shadow: rgba(0, 79, 255, 0.3) 0 15px 30px -5px;
+    color: #FFFFFF;
+    cursor: pointer;
+    transform: translateY(-6px);
+    transition: transform 700ms cubic-bezier(.3, .7, .4, 1.5);
+}
+</style>
 
 <h1 class="mt-5">Manage Topics</h1>
 
 <p>
-	<a href="#" class="btn btn-primary float-right mb-3" onclick="AddEditTopic(0)"><i class="glyphicon glyphicon-pencil"></i> Add New Topic</a>
+	<a href="#" class="btn btn-primary btn-add-gradient float-right mb-3" onclick="AddEditTopic(0)"> Add New Topic</a>
 </p>
 <table class="table table-hover table-bordered">
 	<thead>
-		<tr>
+		<tr class="text-center">
 			<th>
 				@Html.DisplayNameFor(model => model.Id)
 			</th>
 			<th>
-				@Html.DisplayNameFor(model => model.StreamId)
+				Stream Id
 			</th>
 			<th>
 
@@ -26,9 +36,9 @@
 			</th>
 			<th>
 
-				@Html.DisplayNameFor(model => model.ReferenceURL)
+				Referenece URL
 			</th>
-			<th>
+			<th colspan="2">
 				Actions
 			</th>
 		</tr>
@@ -50,9 +60,11 @@
 					@Html.DisplayFor(modelItem => item.ReferenceURL)
 				</td>
 
-				<td>
-					<a href="#" class="btn btn-primary" onclick="AddEditTopic(@item.Id)"><i class="glyphicon glyphicon-pencil"></i> Edit</a> |
-					<a class="btn btn-outline-primary" href="/Shared/Topics/DeleteTopic/@item.Id">Delete</a>
+				<td class="text-center">
+					<a href="#" class="btn btn-primary" onclick="AddEditTopic(@item.Id)"><i class="fa fa-pencil"></i></a> 
+					</td>
+					<td class="text-center">
+					<a class="btn btn-danger btn-xs delete-button" href="/Shared/Topics/DeleteTopic/@item.Id"><i class="fa fa-trash"></i></a>
 					@*  @using (Html.BeginForm("DeleteStream", "Stream", new { id = item.Id, Area="Shared" }))
 						{
 						<button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete record with ID = @item.Id');"><i class="fa fa-trash"></i> Delete</button>
