--- a/iTrainee.MVC/wwwroot/css/site.css
+++ b/iTrainee.MVC/wwwroot/css/site.css
@@ -104,3 +104,13 @@ body {
 .login-gradient {
     background: linear-gradient(144deg,#009ffd, rgb(0,35,155) 50%);
 }
+
+.btn-add-gradient {
+    background-image: linear-gradient(144deg,#009ffd, rgb(0,35,155) 50%);
+    border-radius: 4px;
+    box-shadow: rgba(0, 79, 255, 0.3) 0 15px 30px -5px;
+    color: #FFFFFF;
+    cursor: pointer;
+    transform: translateY(-6px);
+    transition: transform 700ms cubic-bezier(.3, .7, .4, 1.5);
+}
