--- a/iTrainee.MVC/Areas/Admin/Views/Home/ManageUser.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/ManageUser.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<iTrainee.Models.User>
 
 @{
-    ViewData["Title"] = "ManageMentor";
+    ViewData["Title"] = "ManageUser";
 }
 
 <head>
@@ -79,7 +79,7 @@
             </td>*@
             <td>
                 <button type="button" class="btn btn-primary" onclick="GetUser(@item.Id)"><i class="glyphicon glyphicon-pencil"></i>Edit</button>
-                <button type="button" class="btn btn-danger btn-xs delete-button" data-id="@item.Id" data-toggle="modal" data-target="#delete"><i class="fa fa-trash"></i> Delete</button>
+                <button type="button" class="btn btn-danger btn-xs delete-button" data-id-to-delete="@item.Id" data-toggle="modal" data-target="#delete"><i class="fa fa-trash"></i> Delete</button>
 
             </td>
         </tr>
@@ -137,7 +137,7 @@
                     $('#delete-yes-button').on('click', function () {
                         $.ajax({
                             url: "/Admin/Home/DeleteUser/" + id,
-                            type: "GET",
+                            type: "POST",
                             contentType: "application/json;charset=UTF-8",
                             dataType: "json",
 
