--- a/iTrainee.MVC/Areas/Admin/Views/Home/SaveUser.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/SaveUser.cshtml
@@ -1,25 +1,51 @@
 ﻿@model iTrainee.Models.User
 <form id="myForm">
-
     <div class="form-group">
-        <input type="hidden" class="form-control" name="Id" id="id" value="@Model.Id" readonly>
+        <label class="col-form-label">First Name</label>
+        <input type="text" class="form-control" name="FirstName" value="@Model.FirstName" required/>
     </div>
     <div class="form-group">
-        <label class="col-form-label">FirstName</label>
-        <input type="text" class="form-control" name="FirstName" value="@Model.FirstName"/>
-    </div>
-    <div class="form-group">
-        <label class="col-form-label">LastName</label>
-        <input type="text" class="form-control" name="LastName" value="@Model.LastName"/>
+        <label class="col-form-label">Last Name</label>
+        <input type="text" class="form-control" name="LastName" value="@Model.LastName" required/>
     </div>
     <div class="form-group">
         <label class="col-form-lab el">Date Of Birth</label>
-        <input type="date" class="form-control" name="DateOfBirth" value="@Model.DOB"/>
+        <input type="date" class="form-control" name="DOB" value="@Model.DOB.ToString("dd/MM/yyyy")" required/>
     </div>
     <div class="form-group">
         <label class="col-form-label">Qualification</label>
-        <input type="text" class="form-control" name="Qualification" value="@Model.Qualification"/>
+        <input type="text" class="form-control" name="Qualification" value="@Model.Qualification" required/>
     </div>
+
+    @if (0 == @Model.Id)
+    {
+        <label class="col-form-lab el d-block form-group">Choose Role</label>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox">
+            <label class="form-check-label" for="inlineCheckbox1">Admin</label>
+        </div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="checkbox">
+            <label class="form-check-label" for="inlineCheckbox1">Mentor</label>
+        </div>
+        <div class="form-check form-check-inline form-group">
+            <input class="form-check-input" type="checkbox">
+            <label class="form-check-label" for="inlineCheckbox2">Trainee</label>
+        </div>
+        <div class="form-group">
+            <label class="col-form-label">User Name</label>
+            <input type="email" class="form-control" name="UserName" required/>
+        </div>
+        <div class="form-group">
+            <label class="col-form-label">Password</label>
+            <input type="password" class="form-control" name="Password" placeholder="example@org.com" required/>
+        </div>
+        <div class="form-group">
+            <label class="col-form-label">Confirm Password</label>
+            <input type="password" class="form-control" name="Confirm Password" required/>
+        </div>
+    }
+
     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
     <input type="submit" class="btn btn-success" value="Save" name="submit" id="btnSubmit" />
 </form>
