--- a/iTrainee.MVC/Areas/Admin/Views/Home/ManageUser.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/ManageUser.cshtml
@@ -4,32 +4,31 @@
     ViewData["Title"] = "ManageUser";
 }
 
-<head>
-    <style>
-        .create {
-            cursor: pointer;
-            color: #00239b !important;
-            text-decoration: underline !important;
-            margin: 10px 0 5px 0;
-        }
+<style>
+    .delete-icon {
+        color: red;
+        font-size: x-large;
+    }
+        .edit-icon {
+        color: #00239B;
+        font-size: x-large;
+    }
+    .btn-add-gradient {
+        background-image: linear-gradient(144deg,#009ffd, rgb(0,35,155) 50%);
+        border-radius: 4px;
+        box-shadow: rgba(0, 79, 255, 0.3) 0 15px 30px -5px;
+        color: #FFFF;
+        cursor: pointer;
+        transform: translateY(-6px);
+        transition: transform 700ms cubic-bezier(.3, .7, .4, 1.5);
+    }
+</style>
 
-            .create:hover {
-                color: #0033e2 !important;
-                text-decoration: none !important;
-                transform: translateY(-3.5px);
-                transition: transform 700ms cubic-bezier(.3, .7, .4, 1.5);
-            }
-
-        .btn-primary {
-            background-color: #00239b;
-        }
-    </style>
-</head>
-
-<div class="create">
-    <a data-toggle="modal" onclick="GetUser(0)" data-target="#myModal1"><i class="fa fa-user-plus"></i>Create New</a>
+<div class="d-flex justify-content-between mt-4">
+    <h3>Manage User</h3>
+    <button data-toggle="modal" class="btn btn-add-gradient btn-primary mb-3" onclick="GetUser(0)" data-target="#myModal1">Add New</button>
 </div>
-<table class="table table-hover">
+<table class="table table-hover table-bordered">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Id)
@@ -49,9 +48,7 @@
         <th>
             @Html.DisplayNameFor(model => model.Qualification)
         </th>
-        @*            <th>
-            @Html.DisplayNameFor(model => model.UserName)
-            </th>*@
+        <th colspan="2">Actions</th>
     </tr>
     @foreach (var item in Model)
     {
@@ -74,13 +71,12 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Qualification)
             </td>
-@*            <td>
+            @*            <td>
                 @Html.DisplayFor(modelItem => item.UserName)
-            </td>*@
+                </td>*@
             <td>
-                <button type="button" class="btn btn-primary" onclick="GetUser(@item.Id)"><i class="glyphicon glyphicon-pencil"></i>Edit</button>
-                <button type="button" class="btn btn-danger btn-xs delete-button" data-id-to-delete="@item.Id" data-toggle="modal" data-target="#delete"><i class="fa fa-trash"></i> Delete</button>
-
+                <a onclick="GetUser(@item.Id)" ><i class="fa fa-pencil edit-icon"></i></a>
+                <a data-id-to-delete="@item.Id" class="ml-4" data-toggle="modal" data-target="#delete"><i class="fa fa-trash delete-icon"></i></a>
             </td>
         </tr>
     }
@@ -123,9 +119,9 @@
 @section scripts {
 <script type="text/javascript">
 
-    var GetUser = function (a) {
-        var e = "/Admin/Home/SaveUser?Id=" + a;
-        $("#myModalBodyDiv1").load(e, function () {
+    var GetUser = function (id) {
+        var UserPath = "/Admin/Home/SaveUser?Id=" + id;
+        $("#myModalBodyDiv1").load(UserPath, function () {
             $("#myModal1").modal("show");
         });
     };
