Changed User table(changed code according to the table,  selecting user by trainee, mentor instead of user)

--- a/iTrainee.MVC/Areas/Admin/Views/Home/index.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/index.cshtml
@@ -35,7 +35,7 @@
 <div class="admin-dashboard-container">
 <div class="row row-cols-1 row-cols-md-2 g-4 admin-dashboard-row">
   <div class="col">
-      <a href="/Admin/Home/ManageUser">
+      <a href="/Admin/Home/ManageUser?role=Mentor">
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Mentor</h5>
@@ -45,6 +45,7 @@
     </a>
   </div>
   <div class="col">
+    <a href="/Admin/Home/ManageUser?role=Trainee">
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Trainee</h5>
@@ -53,6 +54,7 @@
         </p>
       </div>
     </div>
+    </a>
   </div>
   <div class="col">
     <div class="card">
