--- a/iTrainee.MVC/Areas/Admin/Views/Home/SaveUser.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/SaveUser.cshtml
@@ -24,28 +24,29 @@
         <input type="text" class="form-control" name="Qualification" value="@Model.Qualification" required />
     </div>
 
+    <label class="col-form-lab el d-block form-group">Choose Role</label>
+    <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox">
+        <label class="form-check-label" for="inlineCheckbox1">Admin</label>
+    </div>
+    <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox">
+        <label class="form-check-label" for="inlineCheckbox1">Mentor</label>
+    </div>
+    <div class="form-check form-check-inline form-group">
+        <input class="form-check-input" type="checkbox">
+        <label class="form-check-label" for="inlineCheckbox2">Trainee</label>
+    </div>
+
     @if (0 == @Model.Id)
     {
-        <label class="col-form-lab el d-block form-group">Choose Role</label>
-        <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox">
-            <label class="form-check-label" for="inlineCheckbox1">Admin</label>
-        </div>
-        <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox">
-            <label class="form-check-label" for="inlineCheckbox1">Mentor</label>
-        </div>
-        <div class="form-check form-check-inline form-group">
-            <input class="form-check-input" type="checkbox">
-            <label class="form-check-label" for="inlineCheckbox2">Trainee</label>
-        </div>
         <div class="form-group">
             <label class="col-form-label">User Name</label>
-            <input type="email" class="form-control" name="UserName" required />
+            <input type="email" class="form-control" name="UserName" placeholder="example@org.com" required />
         </div>
         <div class="form-group">
             <label class="col-form-label">Password</label>
-            <input type="password" class="form-control" name="Password" placeholder="example@org.com" required />
+            <input type="password" class="form-control" name="Password" required />
         </div>
         <div class="form-group">
             <label class="col-form-label">Confirm Password</label>
