Ajax for Trainee, mentor list, stored procedure changed for SaveUser so changed according to the that

--- a/iTrainee.MVC/Areas/Admin/Views/Home/ManageUser.cshtml
+++ b/iTrainee.MVC/Areas/Admin/Views/Home/ManageUser.cshtml
@@ -94,8 +94,8 @@
 </div>
 
 
-<div class="modal fade" id="myModal1">
-    <div class="modal-dialog">
+<div class="modal" fade" id="myModal1">
+    <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
                 <h3 class="modal-title">Save User</h3>
