Ajax for Trainee, mentor list, stored procedure changed for SaveUser.

--- a/iTrainee.MVC/Views/Shared/Header.cshtml
+++ b/iTrainee.MVC/Views/Shared/Header.cshtml
@@ -46,10 +46,10 @@
                     @if (ViewData["Title"].Equals("Home Page"))
                     {
                         <li class="nav-item px-3">
-                            <a class="nav-link text-white" href="#">Mentor</a>
+                            <a class="nav-link text-white" href="/Admin/Home/ManageUser?role=Mentor">Mentor</a>
                         </li>
                         <li class="nav-item px-3">
-                            <a class="nav-link text-white" href="#">Trainee</a>
+                            <a class="nav-link text-white" href="/Admin/Home/ManageUser?role=Trainee">Trainee</a>
                         </li>
                         <li class="nav-item px-3">
                             <a class="nav-link text-white" href="#">Batch</a>
